--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,11 @@ body{
     justify-content: space-around;
 }
 
-
+.play-field-effect{
+    transform: scale(1.1,1.1);
+    transition-duration: 300ms;
+    box-shadow: 0px 0px 5px 2px black;
+}
 
 .player-choice-heading,
 .computer-choice-heading {
@@ -86,11 +90,12 @@ img{
 }
 
 button {
-    border-radius: 100px;
-    padding: 50px 80px;
+    border: 4px solid black;
+    border-radius: 30px;
+    padding: 30px 50px;
     font-size: 30px;
     font-family: "Permanent Marker", sans-serif;
-    background-color: #97CAEF;
+    background-color: #8ae6ee;
 }
 
 .results {
@@ -110,7 +115,7 @@ button {
 .footer {
     display: flex;
     justify-content: center;
-    background-color:#70b3e4;
+    background-color:#97CAEF;
     margin-top: 80px;
     font-family: "Fuzzy Bubbles", serif;
 }
