--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,8 @@ button {
     font-size: 30px;
     font-family: "Permanent Marker", sans-serif;
     background-color: #8ae6ee;
+    width: 240px;
+    height: auto;
 }
 
 .results {
@@ -110,12 +112,14 @@ button {
     font-family: "Dosis", sans-serif;
     font-size: 28px;
     font-weight: bold;
+    height: 100px;
+    width: auto;
 }
 
 .footer {
     display: flex;
     justify-content: center;
     background-color:#97CAEF;
-    margin-top: 80px;
+    margin-top: 30px;
     font-family: "Fuzzy Bubbles", serif;
 }
